--- a/src/components/list/style/list.scss
+++ b/src/components/list/style/list.scss
@@ -33,11 +33,17 @@
                     flex: 1;
                     display: inline-flex;
                     flex-flow: column;
+                    overflow: hidden;
                     span:first-child {
+                        font-size: 0.28rem;
                         color: #333;
                     }
                     span:last-child {
                         color: #999;
+                        font-size: 0.22rem;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
                     }
                 }
             }
